# Template_SW2

./: .gitignore  CMakeLists.txt  cmake_run.sh  exec.sh  gtest_run.sh  template_readme.md
.devcontainer/: devcontainer.json
